testsuite/deprecated/veronac/resolution/compile-fail/builtin-body.verona
// Copyright Microsoft and Project Verona Contributors.
// SPDX-License-Identifier: MIT

class Main {
  // CHECK-L: builtin-body.verona:${LINE:+1}:11: error: Builtin method 'foo' in 'Main' must not have a body
  builtin foo() { }
}
